ben's comments